Cyberduck
https://cyberduck.io/

6.6.2
- [Bugfix] Cannot write to shared folders (Google Drive)
- [Bugfix] Repeated prompt for private key (SFTP, Mac App Store)

6.6.1
- [Bugfix] Crash attempting to add empty password to keychain (SFTP, macOS) (#10342)

6.6.0
- [Feature] Use toast notifications (Windows) (#10268)
- [Feature] Include shared items (OneDrive) (#10107)
- [Feature] Add support to login with Shared Access Signature (SAS) Token (Azure) (#10321)
- [Feature] Support to queue transfers (#9984)
- [Feature] Create and delete team drives (Google Drive)
- [Bugfix] Cannot create new vault in team drive (Google Drive, Cryptomator) (#10324)
- [Bugfix] Missing files in folders of vault (Google Drive, Cryptomator) (#10315)
- [Bugfix] Application error when opening connection (DRACOON) (Windows Store)
- [Bugfix] Disabled menu item to create new container (Azure)
- [Bugfix] Disabled menu item to create new bucket (Backblaze B2)

6.5.0
- [Bugfix] Improved performance accessing vaults (Cryptomator)
- [Bugfix] Improved performance accessing files (Backblaze B2, Google Drive)
- [Bugfix] Allow reuse of OAuth tokens (Cyberduck CLI, Windows)

6.4.6
- [Bugfix] Fix use proxy configuration using PAC file (macOS)
- [Bugfix] Disable extended master secret extension to allow session reuse for data connections (FTP-SSL) (#10276)

6.4.4
- [Bugfix] Skip failures saving or finding passwords in credential manager (Windows)
- [Bugfix] Ignore 550 error replies for STAT (FTP) (#10240)

6.4.3
- [Bugfix] Workaround error parsing codesigning entitlement by signing process in Mac App Store causing connect error due to missing entitlement key (Mac App Store) (#10237)

6.4.1
- [Bugfix] Cannot edit ACLs and metadata in Info panel (macOS) (#10226)

6.4.0
- [Feature] Support for eu-west-3 (Paris) region (S3) (#10207)
- [Feature] Support for Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)
- [Feature] Save passwords in credential manager (Windows) (#9988)