@@ -78,6 +78,11 @@
 <ul>
     <li><span class="label label-warning">Bugfix</span> Cannot write to shared folders (Google Drive)</li>
     <li><span class="label label-warning">Bugfix</span> Repeated prompt for private key (SFTP, Mac App Store)</li>
+    <li><span class="label label-warning">Bugfix</span> Authenticating with password protected ed25519 private key
+        (SFTP)
+        (<a
+            href="https://trac.cyberduck.io/ticket/10130">#10130</a>)
+    </li>
 </ul>
 
 <p>
